--- a/Project/main.css
+++ b/Project/main.css
@@ -63,7 +63,7 @@ img {
 }
 .logo {
     display: block;
-    margin-right: 100px;
+    margin-right: 78px;
 }
 .menu__item {
     display: inline-block;
@@ -102,20 +102,20 @@ img {
     text-decoration: underline;
 }
 .hello {
-    margin-bottom: 200px;
+    margin-bottom: 243px;
     
 }
 .hello__title {
     font-size: 73px;
     font-weight: bold;
     line-height: 1.1;
-    margin-bottom: 44px;
+    margin-bottom: 49px;
     max-width: 517px;
-    margin-top: 0;
+    margin-top: 43px;
 }
 .hello__text {
     font-size: 18px;
-    margin-bottom: 45px;
+    margin-bottom: 31px;
 }
 .button {
     padding: 18px 40px;
@@ -150,7 +150,7 @@ img {
     margin-left: 12px;
 }
 .offers {
-    margin-bottom: 117px;
+    margin-bottom: 116px;
 }
 .offers__item {
     min-height: 305px;
@@ -199,7 +199,7 @@ img {
 }
 
 .offers__text {
-    margin-bottom: 24px;
+    margin-bottom: 44px;
     font-size: 14px;
     margin-top: 0;
 }
@@ -210,6 +210,10 @@ img {
 }
 .news {
     margin-bottom: 152px;
+}
+.news_title {
+    margin-left: 10px;
+    margin-bottom: 46px;
 }
 .news__container {
     max-width: 1162px;
@@ -234,18 +238,21 @@ img {
     left: 0;
     right: 0;
     bottom: 0;
-    padding: 25px 30px;
+    padding: 28px 41px;
     min-height: 164px;
 }
 .news__date {
     font-size: 14px;
-    margin-bottom: 18px;
+    margin-bottom: 12px;
 }
 .news__subtitle {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 5px;
     margin-top: 0;
+}
+.news__text {
+    font-size: 16px;
 }
 .news__list {
     margin-bottom: 57px;
@@ -260,10 +267,14 @@ img {
 .pagination__display,.pagination__list {
     display: inline-block;
     vertical-align: middle;
+    margin-left: 13px;
 }
 .pagination__display {
-    margin-right: 25px;
+    margin-right: 9px;
     font-size: 16px;
+}
+.pagination__display_light {
+    padding: 0px 15px;
 }
 .pagination__item {
     display: inline-block;
@@ -274,11 +285,11 @@ img {
     background: #fff;
     color: #F5170E;
 }
-.pagination_theme_light .pagination__item_active .pagination__link, .pagination__item:hover 
-.pagination__link {
+.pagination_theme_light .pagination__item_active .pagination__link, .pagination_theme_light .pagination__item:hover .pagination__link{
     background: #F5170E;
     color: #fff;
 }
+
 .pagination__link {
     display: block;
     width: 32px;
@@ -315,7 +326,7 @@ img {
     border-radius: 5px;
     position: relative;
     display: inline-block;
-    margin-top: 135px;
+    margin-top: 119px;
     text-align: left;
 }
 p.about__text {
@@ -325,19 +336,23 @@ p.about__text {
     color: #fff;
 }
 .about {
-    margin-bottom: 35px;
+    margin-bottom: 77px;
 }
-
 .footer__container {
+    width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     border-top: 4px solid rgba(255 255 255 /10%);
 }
-
-.footer {
+.footer__container_section {
     padding-top: 30px;
-    margin-bottom: 90px;
+    padding-bottom: 90px;
+}
+.footer__container_services {
+    padding-top: 48px;
+    padding-bottom: 42px;
+}
+.footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -357,9 +372,7 @@ p.about__text {
 .socials {
     display: flex;
     justify-content: center;
-    right: 300px;
-    top: 50%;
-    transform: translateY(-50%);
+    margin-right: 78px
 }
 .socials__item:last-child {
     margin-right: 0;
@@ -422,10 +435,13 @@ p.about__text {
  .page-content {
      background: #F2F2F2;
      color: #303030;
-     padding: 40px 0;
+     padding: 84px 0;
  }
  .services {
-    margin-bottom: 65px;
+    margin-bottom: 48px;
+ }
+ .services__item {
+     margin-bottom: 22px;
  }
  .service {
     display: flex;
@@ -436,8 +452,8 @@ p.about__text {
     background: rgb(218, 216, 216);
  }
  .service__img {
-    width: 30%;
-    margin-right: 7%;
+    width: 40%;
+    margin-right: 5%;
  }
  .services__content {
     flex: 1;
@@ -445,17 +461,25 @@ p.about__text {
  .service__title {
     font-size: 36px;
     font-weight: bold;
-    margin-bottom: 26px;
+    margin-bottom: 22px;
     color: #000000;
+    margin-top: 12px;
  }
  .service__desc {
     line-height: 27px;
     margin-bottom: 34px;
+    font-size: 16px;
+ }
+ .button_service {
+     margin-top: 7px;
+ }
+ .button_services {
+     margin-top: 3px;
  }
 .inner-section {
     background: #fff;
     color: #1A1B1E;
-    padding: 88px 0;
+    padding: 73px 0;
  }
  .inner-section_bd_grey {
     background: #F4F5F5;
@@ -463,7 +487,10 @@ p.about__text {
  .inner-section__title {
     font-size: 48px;
     font-weight: bold;
-    margin-bottom: 88px;
+    margin-bottom: 80px;
+ }
+ .iner-footer {
+     margin-top: auto;
  }
  .partners {
     display: flex;
