Финальные правки от 23.06.2021
приветственная секция
Отзывы
плавность анимации

--- a/Project/main.css
+++ b/Project/main.css
@@ -14,6 +14,7 @@ body {
 }
 a {
     color: inherit;
+    transition: all 0.4s;
 }
 ul {
     padding: 0;
@@ -124,6 +125,8 @@ img {
     text-decoration: none;
     border-radius: 35px;
     display: inline-block;
+    cursor: pointer;
+    transition: all 0.5s;
 }
 .button:hover {
     background: #F5170E;
@@ -135,6 +138,13 @@ img {
 .button--light:hover {
     background: #F5170E;
     color: #fff;
+}
+.button--color--black {
+    background: #2B2B2B;
+    color: #fff;
+}
+.button--color--black:hover {
+    background: #2B2B2B;
 }
 .title--fire {
     margin-bottom: 44px;
@@ -512,3 +522,204 @@ p.about__text {
  .partners__link:hover {
     filter: grayscale(0);
  }
+
+/* reviews page */
+
+.reviews {
+    column-count: 2;
+    column-gap: 30px;
+    margin-bottom: 70px;
+}
+.reviews__item {
+    margin-bottom: 30px;
+}
+.review {
+    display: inline-flex;
+    flex-direction: column;
+    padding: 50px 30px;
+    background: #e6e6e6;
+}
+.review__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.review__user {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #2E77A4;
+    margin-bottom: 12px;
+}
+.review__user::after {
+    content: url(./img/vk-blue\ 1.png);
+    height: 29px;
+    margin-left: 10px;
+}
+.avatar {
+    width: 142px;
+    height: 142px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.review__userdata {
+    margin-left: 15px;
+}
+.review__tags {
+    display: flex;
+    align-items: flex-start;
+}
+.tag {
+    font-size: 13px;
+    color: #333;
+    padding: 8px 16px;
+    border-radius: 50px;
+    background: #E7E7E7;
+}
+.tag--bd--green {
+    background: #B9EAE4;
+}
+.review__title {
+    font-size: 30px;
+    color: #1A1B1E;
+    font-weight: bold;
+    margin-bottom: 23px;
+}
+.review__content-text {
+    margin-bottom: 50px;
+}
+.review__date {
+    font-size: 14px;
+    color: #1A1B1E;
+    font-weight: bold;
+}
+.separator {
+    background: url(./img/picmaps2.png) no-repeat;
+    min-height: 360px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+}
+.separator__content {
+    max-width: 55%;
+}
+.separator__title {
+    font-size: 48px;
+    font-weight: bold;
+    line-height: 1.1;
+}
+.form__row {
+    display: flex;
+    margin-bottom: 30px;
+}
+.form__input {
+    flex: 1;
+    margin-right: 30px;
+    border-radius: 4px;
+    border: none;
+    background: #fff;
+    padding: 22px 30px;
+    font-size: 18px;
+    color: #1A1B1E;
+}
+.form__input::placeholder {
+    color: #666;
+}
+.form__input:last-child {
+    margin-right: 0px;
+}
+.form__input--textare {
+    height: 235px;
+}
+.form__conrols {
+    display: flex;
+    margin-bottom: 35px;
+}
+.form__controls-title {
+    width: 37%;
+    padding-left: 20px;
+    font-size: 18px;
+}
+.controls {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+}
+.controls__item {
+    cursor: pointer;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+.controls__checkbox:checked ~ .controls__tag {
+    background: #B9EAE4;
+}
+.controls__checkbox {
+    display: none;
+}
+.form__button {
+    margin-right: 20px;
+}
+.form__button:last-child {
+    margin-right: 0;
+}
+.form__btns {
+    display: flex;
+    justify-content: flex-end;
+}
+.controls__tag {
+    cursor: pointer;
+}
+
+/* Welcome page */
+
+.welcome {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    background: url(./img/bg.png) center bottom / cover no-repeat;
+}
+.central {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: zoom 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+.central__text {
+    font-size: 18px;
+    margin-bottom: 52px;
+}
+@keyframes zoom {
+    from {
+        transform: scale(.7);
+    }
+
+    20% {
+        transform: scale(1.15);
+    }
+
+    40% {
+        transform: scale(.9);
+    }
+
+    60% {
+        transform: scale(1.1);
+    }
+
+    80% {
+        transform: scale(.95);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
